tests/fixtures/errors/e0602_arm_after_wildcard.mimz
// expect: E0602
module M {
  in sel: bits[2]
  in a: bit
  out y: bit
  y = match sel {
    _ => a
    0 => a
  }
}
